REFACTOR on getAllSdas to use pagination and order and order column
